# cascabel

./: LICENSE  README.md  pyproject.toml
cascabel/: __init__.py  cli.py  repository.py  repository_types.py
cascabel/configuration/: configuration_manager.py
cascabel/installation/: __init__.py  installer.py  shell_installer.py  stow_installer.py
tests/: test_cascabel.py
